- Add new images and icons - Change some Boostrap's class usage - Change some colors - Change HTML elements order

--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,13 @@ body {
 .contact-icon {
   font-size: 50px;
   text-decoration: none !important;
+  color: #ea7424 !important;
 }
 
 .contact-icon:hover {
   color: white;
+}
+
+.section-title {
+  color: #ea7424 !important;
 }
